Flesh out index.html file

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,13 @@
-<html>
-<head><title>Arkis</title>
-<body>Hello</body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Arkis</title>
+</head>
+
+<body>
+  Hello
+</body>
+
 </html>
