Animated logo (previously seen on Codepen)

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
-  Hello
+
+
+  <div id="logo">
+    <div id="corners-container">
+      <div id="corners-anim-container-1"><div id="corners-anim-container-2">
+        <div id="corners">
+          <div class="row">
+            <div class="corner top left"><div></div></div>
+            <div class="corner top right"><div></div></div>
+          </div>
+          <div class="row">
+            <div class="corner bottom left"><div></div></div>
+            <div class="corner bottom right"><div></div></div>
+          </div>
+        </div>
+      </div></div>
+    </div>
+
+    <div class="letter-main">A</div>
+  </div>
 
 
   <script src="build/home.js"></script>
