--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Arkis</title>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-72586531-6', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
 </head>
 
 <body ontouchstart="">
-
-
   <div id="logo">
     <div id="corners-container">
       <div id="corners-anim-container-1"><div id="corners-anim-container-2">
