Remove unnecessary extra animation container

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 <body ontouchstart="">
   <div id="logo">
     <div id="corners-container">
-      <div id="corners-anim-container-1"><div id="corners-anim-container-2">
+      <div id="corners-anim-container">
         <div id="corners">
           <div class="row">
             <div class="corner top left"><div></div></div>
@@ -32,7 +32,7 @@
             <div class="corner bottom right"><div></div></div>
           </div>
         </div>
-      </div></div>
+      </div>
     </div>
 
     <div class="letter-main">A</div>
