animation on click
I did this a few hour ago and forgot to commit

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 <body ontouchstart="">
 
   <!-- Animated logo -->
-  <div id="logo">
+  <div id="animated-logo">
     <div id="corners-container">
       <div id="corners-anim-container">
         <div id="corners">
