Use element classes instead of element ids in some places

--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
 
   <!-- Animated logo -->
   <div id="animated-logo">
-    <div id="corners-container">
-      <div id="corners-anim-container">
-        <div id="corners">
+    <div class="corners-container">
+      <div class="corners-anim-container">
+        <div class="corners">
           <div class="row">
             <div class="corner top left"><div></div></div>
             <div class="corner top right"><div></div></div>
