Don't allow interacting with logo until initial build is finished

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   <div id="animated-logo">
     <div class="corners-container">
       <div class="corners-anim-container">
-        <div class="corners">
+        <div id="corners">
           <div class="row">
             <div class="corner top left"><div></div></div>
             <div class="corner top right"><div></div></div>
