Begin groundwork for cascading fade in animation

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,11 @@
   </div>
 
 
+  <div id="content-main">
+    <div class="top-bar"></div>
+  </div>
+
+
   <!-- Literally everything because webpack -->
   <script src="build/home.js"></script>
 
