Add cards as an example of cascading

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,23 @@
 
 
   <div id="content-main">
-    <div class="top-bar" data-fade></div>
+    <div class="top-bar" data-fade="0.1"></div>
+
+    <div class="card" data-fade=".5"></div>
+    <div class="card" data-fade=".55"></div>
+    <div class="card" data-fade=".6"></div>
+    <div class="card" data-fade=".65"></div>
+    <div class="card" data-fade=".7"></div>
+    <div class="card" data-fade=".75"></div>
+    <div class="card" data-fade=".8"></div>
+    <div class="card" data-fade=".85"></div>
+    <div class="card" data-fade=".9"></div>
+    <div class="card" data-fade=".95"></div>
+    <div class="card" data-fade="1"></div>
+    <div class="card" data-fade="1.05"></div>
+    <div class="card" data-fade="1.1"></div>
+    <div class="card" data-fade="1.15"></div>
+    <div class="card" data-fade="1.2"></div>
   </div>
 
 
