--- a/app/index.html
+++ b/app/index.html
@@ -41,23 +41,15 @@
 
 
   <div id="content-main">
-    <div class="top-bar" data-fade="0.1"></div>
+    <div class="top-bar" data-fade="0.1">
+      <div class="letter-logo">A</div>
 
-    <div class="card" data-fade=".5"></div>
-    <div class="card" data-fade=".55"></div>
-    <div class="card" data-fade=".6"></div>
-    <div class="card" data-fade=".65"></div>
-    <div class="card" data-fade=".7"></div>
-    <div class="card" data-fade=".75"></div>
-    <div class="card" data-fade=".8"></div>
-    <div class="card" data-fade=".85"></div>
-    <div class="card" data-fade=".9"></div>
-    <div class="card" data-fade=".95"></div>
-    <div class="card" data-fade="1"></div>
-    <div class="card" data-fade="1.05"></div>
-    <div class="card" data-fade="1.1"></div>
-    <div class="card" data-fade="1.15"></div>
-    <div class="card" data-fade="1.2"></div>
+      <div class="right">
+        <a href="">About</a>
+        <a href="">Products</a>
+        <a href="">Company</a>
+      </div>
+    </div>
   </div>
 
 
