Headline fade in

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="headline">We are Arkis</div>
+    <div class="headline" data-fade="1">We are Arkis</div>
   </div>
 
 
