--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
       <div class="right">
         <a href="">About</a>
         <a href="">Products</a>
-        <a href="">Company</a>
+        <a href="">Contact</a>
       </div>
     </div>
 
