--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Arkis</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   <!-- Google Analytics-->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
