--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -58,7 +58,7 @@
 
 
   <!-- Literally everything because webpack -->
-  <script src="build/home.js"></script>
+  <script src="home.js"></script>
 
 </body>
 
