Clouds on bottom of main page

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -54,6 +54,8 @@
     </div>
 
     <div class="headline" data-fade="1">We are Arkis</div>
+
+    <img class="clouds" src="clouds.png" alt="">
   </div>
 
 
