Add flexibility to #main-content build animations

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -43,7 +43,7 @@
 
 
   <div id="content-main">
-    <div class="top-bar" data-fade="0.1">
+    <div class="top-bar" data-build-delay="0.1">
       <div class="letter-logo">A</div>
 
       <div class="right">
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <div class="headline" data-fade="1">We are Arkis</div>
+    <div class="headline" data-build-delay="1">We are Arkis</div>
 
     <img class="clouds" src="clouds.png" alt="">
   </div>
