Clouds fade in up and unblur animation

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -55,7 +55,7 @@
 
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
-    <img class="clouds" src="clouds.png" alt="">
+    <img class="clouds" src="clouds.png" alt="" data-build-delay="2">
   </div>
 
 
