--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -55,7 +55,11 @@
 
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
-    <img class="clouds" src="clouds.png" alt="" data-build-delay="2">
+    <section class="white-section">
+      <img class="clouds" src="clouds.png" alt="" data-build-delay="2">
+
+      <div></div>
+    </section>
   </div>
 
 
