Transform applies to entire section

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -55,8 +55,8 @@
 
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
-    <section class="white-section">
-      <img class="clouds" src="clouds.png" alt="" data-build-delay="2">
+    <section class="white-section" data-build-delay="2">
+      <img class="clouds" src="clouds.png" alt="">
 
       <div></div>
     </section>
