--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -56,7 +56,7 @@
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
     <section class="white-section" data-build-delay="2">
-      <img class="clouds" src="mist.png" alt="">
+      <img class="clouds" src="textures/mist-1.png" alt="">
 
       <div></div>
     </section>
