Add gradient behind mist with CSS

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -57,8 +57,9 @@
 
     <section class="white-section" data-build-delay="2">
       <img class="clouds" src="textures/mist-1.png" alt="">
+      <div class="mist-gradient"></div>
 
-      <div></div>
+      <div class="white"></div>
     </section>
   </div>
 
