--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -56,7 +56,10 @@
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
     <section class="white-section" data-build-delay="2">
-      <img class="clouds" src="textures/mist-1.png" alt="">
+      <img class="primary" src="textures/mist-1.png" alt="">
+      <img class="secondary" src="textures/mist-2.png" alt="">
+      <img class="tertiary" src="textures/mist-3.png" alt="">
+
       <div class="mist-gradient"></div>
 
       <div class="white"></div>
