Revert parallax mist layers
This reverts commit e35ad20c08ec5b7fe85453bc0ba43d7a35caf327.

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -56,10 +56,7 @@
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
     <section class="white-section" data-build-delay="2">
-      <img class="primary" src="textures/mist-1.png" alt="">
-      <img class="secondary" src="textures/mist-2.png" alt="">
-      <img class="tertiary" src="textures/mist-3.png" alt="">
-
+      <img class="clouds" src="textures/mist-1.png" alt="">
       <div class="mist-gradient"></div>
 
       <div class="white"></div>
