Replace mist image with canvas

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -56,7 +56,7 @@
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
     <section class="white-section" data-build-delay="2">
-      <img class="clouds" src="textures/mist-1.png" alt="">
+      <canvas id="mist"></canvas>
       <div class="mist-gradient"></div>
 
       <div class="white"></div>
