Fix path to index.js

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -65,7 +65,7 @@
 
 
   <!-- Literally everything because webpack -->
-  <script src="home.js"></script>
+  <script src="index.js"></script>
 
 </body>
 
