Style the 404 page a bit

--- a/app/src/404/index.html
+++ b/app/src/404/index.html
@@ -7,7 +7,9 @@
   <title>404</title>
 </head>
 <body>
-  <div id="mist"></div>
-  <h1>404</h1>
+  <canvas id="mist"></canvas>
+  <h1>Not found</h1>
+
+  <script src="/404/index.js"></script>
 </body>
 </html>
