Add vignette around 404 page

--- a/app/src/404/index.html
+++ b/app/src/404/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <canvas id="mist"></canvas>
+  <div class="vignette"></div>
   <h1>Not found</h1>
 
   <script src="/404/index.js"></script>
