--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -50,6 +50,7 @@
         <a href="">About</a>
         <a href="">Products</a>
         <a href="">Contact</a>
+        <a href="https://github.com/arkis" class="ion ion-logo-github"></a>
       </div>
     </div>
 
