Add hamburger menu icon

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -47,12 +47,14 @@
       <div class="letter-logo">A</div>
 
       <div class="right">
-        <a href="">About</a>
-        <a href="">Products</a>
-        <a href="">Contact</a>
-        <a href="https://github.com/arkis" class="ion ion-logo-github"></a>
+        <a class="desktop-only" href="">About</a>
+        <a class="desktop-only" href="">Products</a>
+        <a class="desktop-only" href="">Contact</a>
+        <a class="desktop-only" href="https://github.com/arkis" class="ion ion-logo-github"></a>
+        <button class="mobile-only ion ion-ios-menu"></button>
       </div>
     </div>
+    <div class="mobile-menu"></div>
 
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
