Make the top bar A into a link

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -44,7 +44,7 @@
 
   <div id="content-main">
     <div class="top-bar" data-build-delay="0.1">
-      <div class="letter-logo">A</div>
+      <a class="letter-logo" href="/">A</a>
 
       <div class="right">
         <a class="desktop-only" href="">About</a>
