Use material menu icon instead of iOS

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -51,7 +51,7 @@
         <a class="desktop-only" href="">Products</a>
         <a class="desktop-only" href="">Contact</a>
         <a class="desktop-only" href="https://github.com/arkis" class="ion ion-logo-github"></a>
-        <button class="mobile-only ion ion-ios-menu"></button>
+        <button class="mobile-only ion ion-md-menu"></button>
       </div>
     </div>
     <div class="mobile-menu"></div>
