Add links to mobile menu

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -54,8 +54,14 @@
         <button class="mobile-only ion ion-md-menu"></button>
       </div>
     </div>
-
-    <div class="mobile-menu"></div>
+    <div class="mobile-menu">
+      <ul>
+        <li><a href="">About</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="https://github.com/arkis">GitHub</a></li>
+      </ul>
+    </div>
 
     <div class="headline" data-build-delay="1">We are Arkis</div>
 
