Prevent mobile menu from blocking everything when it's not open

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -54,7 +54,7 @@
         <button class="mobile-only ion ion-md-menu"></button>
       </div>
     </div>
-    <div class="mobile-menu">
+    <div class="mobile-menu mobile-only">
       <ul>
         <li><a href="">About</a></li>
         <li><a href="">Products</a></li>
