--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -69,7 +69,42 @@
       <canvas id="mist"></canvas>
       <div class="mist-gradient"></div>
 
-      <div class="white"></div>
+      <div class="white">
+        <div class="info-container">
+          <div class="person-info">
+            <img src="https://arkisio.now.sh/profile/1Defenestrator" alt="Luke Taylor">
+            <div class="name">Luke Taylor</div>
+            <a href="https://twitter.com/1Defenestrator">
+              <span class="handle">@1Defenestrator</span>
+              <i class="ion ion-logo-twitter"></i>
+            </a>
+          </div>
+          <div class="person-info">
+            <img src="https://arkisio.now.sh/profile/whitestmystery" alt="Isaac Cheruiyot">
+            <div class="name">Isaac Cheruiyot</div>
+            <a href="https://twitter.com/whitestmystery">
+              <span class="handle">@whitestmystery</span>
+              <i class="ion ion-logo-twitter"></i>
+            </a>
+          </div>
+          <div class="person-info">
+            <img src="https://arkisio.now.sh/profile/skyonfire13" alt="Elijah Tamarchenko">
+            <div class="name">Elijah Tamarchenko</div>
+            <a href="https://twitter.com/skyonfire13">
+              <span class="handle">@skyonfire13</span>
+              <i class="ion ion-logo-twitter"></i>
+            </a>
+          </div>
+          <div class="person-info">
+            <img src="https://arkisio.now.sh/profile/crimster123" alt="Luciano Crimi">
+            <div class="name">Luciano Crimi</div>
+            <a href="https://twitter.com/skyonfire13">
+              <span class="handle">@crimster123</span>
+              <i class="ion ion-logo-twitter"></i>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
 
