Fix bad twitter link (closes #4)

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -98,7 +98,7 @@
           <div class="person-info">
             <img src="https://arkisio.now.sh/profile/crimster123" alt="Luciano Crimi">
             <div class="name">Luciano Crimi</div>
-            <a href="https://twitter.com/skyonfire13">
+            <a href="https://twitter.com/crimster123">
               <span class="handle">@crimster123</span>
               <i class="ion ion-logo-twitter"></i>
             </a>
