Better name for info-container

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -70,7 +70,7 @@
       <div class="mist-gradient"></div>
 
       <div class="white">
-        <div class="info-container">
+        <div class="person-container">
           <div class="person-info">
             <img src="https://arkisio.now.sh/profile/1Defenestrator" alt="Luke Taylor">
             <div class="name">Luke Taylor</div>
