Use h1 instead of div for headline

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -63,7 +63,7 @@
       </ul>
     </div>
 
-    <div class="headline" data-build-delay="1">We are Arkis</div>
+    <h1 class="headline" data-build-delay="1">We are Arkis</h1>
 
     <section class="white-section" data-build-delay="2">
       <canvas id="mist"></canvas>
