Add 'our team' title above person info cards

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -70,6 +70,7 @@
       <div class="mist-gradient"></div>
 
       <div class="white">
+        <h2 class="center">Our team</h2>
         <div class="person-container">
           <div class="person-info">
             <img src="https://arkisio.now.sh/profile/1Defenestrator" alt="Luke Taylor">
