--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -106,6 +106,11 @@
           </div>
         </div>
       </div>
+
+      <footer>
+        <h5>Arkis</h5>
+        <span class="copyright">Copyright &copy; 2017 Arkis</span>
+      </footer>
     </section>
   </div>
 
