Add letter logo to right of footer

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -108,8 +108,11 @@
       </div>
 
       <footer>
-        <h5>Arkis</h5>
-        <span class="copyright">Copyright &copy; 2017 Arkis</span>
+        <div class="left">
+          <h5>Arkis</h5>
+          <span class="copyright">Copyright &copy; 2017 Arkis</span>
+        </div>
+        <div class="footer-logo">A</div>
       </footer>
     </section>
   </div>
