Add github links for everybody

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -79,6 +79,10 @@
               <span class="handle">@1Defenestrator</span>
               <i class="ion ion-logo-twitter"></i>
             </a>
+            <a href="https://github.com/controversial">
+              <span class="handle">@controversial</span>
+              <i class="ion ion-logo-github"></i>
+            </a>
           </div>
           <div class="person-info">
             <img src="https://arkisio.now.sh/profile/whitestmystery" alt="Isaac Cheruiyot">
@@ -86,6 +90,10 @@
             <a href="https://twitter.com/whitestmystery">
               <span class="handle">@whitestmystery</span>
               <i class="ion ion-logo-twitter"></i>
+            </a>
+            <a href="https://github.com/icykip">
+              <span class="handle">@icykip</span>
+              <i class="ion ion-logo-github"></i>
             </a>
           </div>
           <div class="person-info">
@@ -102,6 +110,10 @@
             <a href="https://twitter.com/crimster123">
               <span class="handle">@crimster123</span>
               <i class="ion ion-logo-twitter"></i>
+            </a>
+            <a href="https://github.com/crimster123">
+              <span class="handle">@crimster123</span>
+              <i class="ion ion-logo-github"></i>
             </a>
           </div>
         </div>
