Elijah changed his Twitter

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -110,10 +110,10 @@
             </a>
           </div>
           <div class="person-info">
-            <img src="https://arkisio.now.sh/profile/skyonfire13" alt="Elijah Tamarchenko">
+            <img src="https://arkisio.now.sh/profile/conqueror1776" alt="Elijah Tamarchenko">
             <div class="name">Elijah Tamarchenko</div>
-            <a href="https://twitter.com/skyonfire13">
-              <span class="handle">@skyonfire13</span>
+            <a href="https://twitter.com/conqueror1776">
+              <span class="handle">@conqueror1776</span>
               <i class="ion ion-logo-twitter"></i>
             </a>
           </div>
