Elijah got a GitHub

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -116,6 +116,10 @@
               <span class="handle">@conqueror1776</span>
               <i class="ion ion-logo-twitter"></i>
             </a>
+            <a href="https://github.com/conqueror1776">
+              <span class="handle">@conqueror1776</span>
+              <i class="ion ion-logo-github"></i>
+            </a>
           </div>
           <div class="person-info">
             <img src="https://arkisio.now.sh/profile/crimster123" alt="Luciano Crimi">
