Remove white section and adopt more static positioning

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -74,79 +74,75 @@
     <!-- Central header (most prominent text on page) -->
     <h1 class="headline" data-build-delay="1">We are Arkis</h1>
 
-    <!-- The section with the smoke and everything below it -->
-    <section class="white-section" data-build-delay="2">
+    <canvas id="mist" data-build-delay="2"></canvas>
+    <div class="mist-gradient"></div>
 
-      <canvas id="mist"></canvas>
-      <div class="mist-gradient"></div>
+    <div class="white">
+      <h2 class="center">Our team</h2>
 
-      <div class="white">
-        <h2 class="center">Our team</h2>
-
-        <!-- Information about the members of Arkis -->
-        <div class="person-container">
-          <div class="person-info">
-            <img src="https://arkisio.now.sh/profile/1Defenestrator" alt="Luke Taylor">
-            <div class="name">Luke Taylor</div>
-            <a href="https://twitter.com/1Defenestrator">
-              <span class="handle">@1Defenestrator</span>
-              <i class="ion ion-logo-twitter"></i>
-            </a>
-            <a href="https://github.com/controversial">
-              <span class="handle">@controversial</span>
-              <i class="ion ion-logo-github"></i>
-            </a>
-          </div>
-          <div class="person-info">
-            <img src="https://arkisio.now.sh/profile/whitestmystery" alt="Isaac Cheruiyot">
-            <div class="name">Isaac Cheruiyot</div>
-            <a href="https://twitter.com/whitestmystery">
-              <span class="handle">@whitestmystery</span>
-              <i class="ion ion-logo-twitter"></i>
-            </a>
-            <a href="https://github.com/icykip">
-              <span class="handle">@icykip</span>
-              <i class="ion ion-logo-github"></i>
-            </a>
-          </div>
-          <div class="person-info">
-            <img src="https://arkisio.now.sh/profile/conqueror1776" alt="Elijah Tamarchenko">
-            <div class="name">Elijah Tamarchenko</div>
-            <a href="https://twitter.com/conqueror1776">
-              <span class="handle">@conqueror1776</span>
-              <i class="ion ion-logo-twitter"></i>
-            </a>
-            <a href="https://github.com/conqueror1776">
-              <span class="handle">@conqueror1776</span>
-              <i class="ion ion-logo-github"></i>
-            </a>
-          </div>
-          <div class="person-info">
-            <img src="https://arkisio.now.sh/profile/crimster123" alt="Luciano Crimi">
-            <div class="name">Luciano Crimi</div>
-            <a href="https://twitter.com/crimster123">
-              <span class="handle">@crimster123</span>
-              <i class="ion ion-logo-twitter"></i>
-            </a>
-            <a href="https://github.com/crimster123">
-              <span class="handle">@crimster123</span>
-              <i class="ion ion-logo-github"></i>
-            </a>
-          </div>
+      <!-- Information about the members of Arkis -->
+      <div class="person-container">
+        <div class="person-info">
+          <img src="https://arkisio.now.sh/profile/1Defenestrator" alt="Luke Taylor">
+          <div class="name">Luke Taylor</div>
+          <a href="https://twitter.com/1Defenestrator">
+            <span class="handle">@1Defenestrator</span>
+            <i class="ion ion-logo-twitter"></i>
+          </a>
+          <a href="https://github.com/controversial">
+            <span class="handle">@controversial</span>
+            <i class="ion ion-logo-github"></i>
+          </a>
         </div>
-
+        <div class="person-info">
+          <img src="https://arkisio.now.sh/profile/whitestmystery" alt="Isaac Cheruiyot">
+          <div class="name">Isaac Cheruiyot</div>
+          <a href="https://twitter.com/whitestmystery">
+            <span class="handle">@whitestmystery</span>
+            <i class="ion ion-logo-twitter"></i>
+          </a>
+          <a href="https://github.com/icykip">
+            <span class="handle">@icykip</span>
+            <i class="ion ion-logo-github"></i>
+          </a>
+        </div>
+        <div class="person-info">
+          <img src="https://arkisio.now.sh/profile/conqueror1776" alt="Elijah Tamarchenko">
+          <div class="name">Elijah Tamarchenko</div>
+          <a href="https://twitter.com/conqueror1776">
+            <span class="handle">@conqueror1776</span>
+            <i class="ion ion-logo-twitter"></i>
+          </a>
+          <a href="https://github.com/conqueror1776">
+            <span class="handle">@conqueror1776</span>
+            <i class="ion ion-logo-github"></i>
+          </a>
+        </div>
+        <div class="person-info">
+          <img src="https://arkisio.now.sh/profile/crimster123" alt="Luciano Crimi">
+          <div class="name">Luciano Crimi</div>
+          <a href="https://twitter.com/crimster123">
+            <span class="handle">@crimster123</span>
+            <i class="ion ion-logo-twitter"></i>
+          </a>
+          <a href="https://github.com/crimster123">
+            <span class="handle">@crimster123</span>
+            <i class="ion ion-logo-github"></i>
+          </a>
+        </div>
       </div>
 
-      <!-- A bit of info at the bottom -->
-      <footer>
-        <div class="left">
-          <h5>Arkis</h5>
-          <span class="copyright">Copyright &copy; 2017 Arkis</span>
-        </div>
-        <div class="footer-logo">A</div>
-      </footer>
+    </div>
 
-    </section>
+    <!-- A bit of info at the bottom -->
+    <footer>
+      <div class="left">
+        <h5>Arkis</h5>
+        <span class="copyright">Copyright &copy; 2017 Arkis</span>
+      </div>
+      <div class="footer-logo">A</div>
+    </footer>
+
   </div>
 
 
