More semantic markup

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -77,12 +77,12 @@
     <canvas id="mist" data-build-delay="2"></canvas>
     <div class="mist-gradient"></div>
 
-    <div class="white">
+    <section class="team-section">
       <h2 class="center">Our team</h2>
 
       <!-- Information about the members of Arkis -->
-      <div class="person-container">
-        <div class="person-info">
+      <div class="cards-container">
+        <div class="member-info">
           <img src="https://arkisio.now.sh/profile/1Defenestrator" alt="Luke Taylor">
           <div class="name">Luke Taylor</div>
           <a href="https://twitter.com/1Defenestrator">
@@ -94,7 +94,7 @@
             <i class="ion ion-logo-github"></i>
           </a>
         </div>
-        <div class="person-info">
+        <div class="member-info">
           <img src="https://arkisio.now.sh/profile/whitestmystery" alt="Isaac Cheruiyot">
           <div class="name">Isaac Cheruiyot</div>
           <a href="https://twitter.com/whitestmystery">
@@ -106,7 +106,7 @@
             <i class="ion ion-logo-github"></i>
           </a>
         </div>
-        <div class="person-info">
+        <div class="member-info">
           <img src="https://arkisio.now.sh/profile/conqueror1776" alt="Elijah Tamarchenko">
           <div class="name">Elijah Tamarchenko</div>
           <a href="https://twitter.com/conqueror1776">
@@ -118,7 +118,7 @@
             <i class="ion ion-logo-github"></i>
           </a>
         </div>
-        <div class="person-info">
+        <div class="member-info">
           <img src="https://arkisio.now.sh/profile/crimster123" alt="Luciano Crimi">
           <div class="name">Luciano Crimi</div>
           <a href="https://twitter.com/crimster123">
@@ -132,7 +132,7 @@
         </div>
       </div>
 
-    </div>
+    </section>
 
     <!-- A bit of info at the bottom -->
     <footer>
