Begin contact form

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -134,6 +134,23 @@
 
     </section>
 
+    <!-- Map showing where we are roughly -->
+    <section id="map">
+
+    </section>
+
+    <section class="contact">
+      <h4 class="center">Contact</h4>
+      <div>
+        <input type="text" placeholder="First"> <input type="text" placeholder="Last">
+      </div>
+      <input type="email" placeholder="Email">
+      <input type="text" placeholder="Subject">
+      <input type="text" placeholder="Message">
+
+      <button>Send</button>
+    </section>
+
     <!-- A bit of info at the bottom -->
     <footer>
       <div class="left">
