Create class for header caps

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -72,13 +72,13 @@
     </div>
 
     <!-- Central header (most prominent text on page) -->
-    <h1 class="headline" data-build-delay="1">We are Arkis</h1>
+    <h1 class="headline center caps" data-build-delay="1">We are Arkis</h1>
 
     <canvas id="mist" data-build-delay="2"></canvas>
     <div class="mist-gradient"></div>
 
     <section class="team-section">
-      <h2 class="center">Our team</h2>
+      <h2 class="center caps">Our team</h2>
 
       <!-- Information about the members of Arkis -->
       <div class="cards-container">
@@ -140,7 +140,7 @@
     </section>
 
     <section class="contact">
-      <h4 class="center">Contact</h4>
+      <h4 class="center caps">Contact</h4>
       <div>
         <input type="text" placeholder="First"> <input type="text" placeholder="Last">
       </div>
