Style inputs in contact form

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -142,9 +142,10 @@
     <section class="contact">
       <h4 class="center caps">Contact</h4>
       <div>
-        <input type="text" placeholder="First"> <input type="text" placeholder="Last">
+        <input type="text" placeholder="First">
+        <input type="text" placeholder="Last">
+        <input type="email" placeholder="Email">
       </div>
-      <input type="email" placeholder="Email">
       <input type="text" placeholder="Subject">
       <input type="text" placeholder="Message">
 
