Better contact card positioning

--- a/app/src/home/index.html
+++ b/app/src/home/index.html
@@ -140,16 +140,18 @@
     </section>
 
     <section class="contact">
-      <h4 class="center caps">Contact</h4>
-      <div>
-        <input type="text" placeholder="First">
-        <input type="text" placeholder="Last">
-        <input type="email" placeholder="Email">
-      </div>
-      <input type="text" placeholder="Subject">
-      <input type="text" placeholder="Message">
+      <form class="contact-form">
+        <h4 class="center caps">Contact</h4>
+        <div>
+          <input type="text" placeholder="First">
+          <input type="text" placeholder="Last">
+          <input type="email" placeholder="Email">
+        </div>
+        <input type="text" placeholder="Subject">
+        <input type="text" placeholder="Message">
 
-      <button>Send</button>
+        <button>Send</button>
+      </form>
     </section>
 
     <!-- A bit of info at the bottom -->
