--- a/app/src/404/index.html
+++ b/app/src/404/index.html
@@ -9,7 +9,7 @@
 <body>
   <canvas id="mist"></canvas>
   <div class="vignette"></div>
-  <h1>Not found</h1>
+  <h1 class="center caps">Not found</h1>
 
   <script src="/404/index.js"></script>
 </body>
